--- a/style.css
+++ b/style.css
@@ -1,19 +1,55 @@
+.main-screen {
+    width: 900px;
+    height: 706px;
+    border: 3px solid black;
+    border-radius: 3%;
+    margin: auto;
+    background-image: url(/img/color.jpg);
+    position: relative;
+}
+
 canvas {
-    cursor: none;
-    border:4px solid black; 
-    background-color: yellow;
+    border: 3px solid black; 
+    border-radius: 3%;
+    background-color: white;
     display: block;
-    margin: 0 auto;
 }
 
-.btn{
-    width: 20px;
-    height: 20px;
+.color-button {
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
-    border-radius: 10px;
-    display: inline-block;
+    border-radius: 50px;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
-.btn:active {
-	background-color: #2f599e !important;
+.width-line {
+    display: block;
+}
+
+.form-clr-btn {
+    position: absolute;
+    right: 75px;
+    top: 90px;
+}
+
+.form-wdt-ln {
+    position: absolute;
+    right: 12px;
+    top: 35px;
+}
+
+body {
+    background-image: url(/img/back.jpg);
+    margin: 3px;
+}
+
+input[type=text],[ type=range] {
+    width: 130px;
+    margin-right: 17px;
+    background:mistyrose;
+    border-radius: 50px;
+    text-align: center;
 }
